fix(codeblock): use custom scrollbars

--- a/public/main.css
+++ b/public/main.css
@@ -99,19 +99,19 @@ li:after {
   content: "-";
 }
 
-html::-webkit-scrollbar {
+*::-webkit-scrollbar {
   width: 8px;
   height: 8px;
 }
-html::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
   padding: 8px;
   background: rgb(22, 23, 29);
 }
-html::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
   background: rgb(123, 123, 123);
   border-radius: 20px;
 }
-html:hover::-webkit-scrollbar-thumb {
+*:hover::-webkit-scrollbar-thumb {
   visibility: visible;
 }
 
